<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    
     <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text_view" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textEmailAddress"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </TableRow>

     <TableRow
         android:id="@+id/tableRow2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/passwordTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password_text_view" />

         <EditText
             android:id="@+id/passwordEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="5"
             android:inputType="textPassword"
			 android:layout_weight="1" />

     </TableRow>

     <TableRow
         android:id="@+id/tableRow3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp" >

         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_span="2"
             android:layout_weight="1"
             android:text="@string/loginButton" />
     </TableRow>

     <Button
         android:id="@+id/cmdRegisterLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_button" />

     <Button
         android:id="@+id/cmdAnonyme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/logginAno" />

</TableLayout>
