<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddProjectActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue" >
        
                <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_project_text_view"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white" />
        
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/nameProjectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name_text_view" />

        <EditText
            android:id="@+id/projectNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/descript2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descript2_text_view" />

        <EditText
            android:id="@+id/descript2EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/descript1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descript1_text_view" />

        <EditText
            android:id="@+id/descript1EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/thresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_text_view" />

        <EditText
            android:id="@+id/thresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1"
             />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/completionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completion_text_view" />

        <EditText
            android:id="@+id/completionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <Button
            android:id="@+id/addProjectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_project_button"
            android:layout_weight="1" />

    </TableRow>

    <Button
        android:id="@+id/cmdBackToIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</TableLayout>
