<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ContributeActivity" >
    
     <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:padding="10dp" >

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projectNameTextView"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"  >

        <TextView
            android:id="@+id/descript2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descript2TextView"
            android:layout_weight="1"
            android:padding="5dp"
            />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
         >

        <TextView
            android:id="@+id/creatorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creatorNameTextView"
            android:layout_weight="1"
            android:padding="5dp" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryNameTextView"
            android:layout_weight="1"
            android:padding="5dp" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/contributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contribute_text_view"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/txtContribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:inputType="number"
            android:padding="5dp"
            android:gravity="center_horizontal" >
        </EditText>
                
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <SeekBar
            android:id="@+id/contributeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="@integer/integerPas"
            android:padding="15dp"
            android:progress="0" />

    </TableRow>


    <Button
        android:id="@+id/cmdContribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valider" />

    <Button
        android:id="@+id/cmdCancelContribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Annuler" />

</TableLayout>
